# habits_tracker_DRF

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py
habits/: models.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_period.py
users/: models.py  services.py  views.py
users/management/commands/: csu.py  tgtest.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_chat_id_and_more.py
