[tool.poetry]
name = "habits-tracker-drf"
version = "0.1.0"
description = ""
authors = ["vlad <sapozhnikov.061098@mail.ru>"]
readme = "README.md"
packages = [{include = "habits_tracker_drf"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.7"
python-dotenv = "^1.0.0"
djangorestframework-simplejwt = "^5.3.0"
celery = "^5.3.4"
redis = "^5.0.0"
django-celery-beat = "^2.5.0"
django-filter = "^23.3"
drf-yasg = "^1.21.7"
django-rename-app = "^0.1.6"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
